# pryvacy

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
pryvacy/decorators/pryvacy_decorator/: instance_methods.py
pyvacy/: __init__.py  context.py  decorators.py
pyvacy/decorators/: utils.py
pyvacy/decorators/pyvacy_decorator/: __init__.py  instance_methods.py  nested_classes.py
tests/: test_back_and_forth.py  test_instance_methods.py
