[tool.poetry]
name = "pyvacy"
version = "0.1.0"
description = "A set of access control descriptors for methods and nested classes"
authors = ["Huy-DNA <huydo862003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
